# NezhaSim-An-All-Domain-Simulator

./: README.md  build_log.txt  test_mavlink.cmake
src/nezha_sim/Gazebo/: CMakeLists.txt  package.xml
src/nezha_sim/Gazebo/launch/: Assambly.launch  iris_example.launch  nezha_f.launch  nezha_gantry_distance.launch  nezha_gantry_velocity.launch  nezha_rocket_test.launch  ocean_world.launch  spawn_mav_motified.launch
src/nezha_sim/Gazebo/launch/nezha_husky/: nezha_husky.launch  nezha_husky_UGV_UAV_UUV.launch  nezha_husky_withoutsensor.launch
src/nezha_sim/Gazebo/launch/nezha_mini_lake/: nezha_mini_lake.launch
src/nezha_sim/Gazebo/launch/spotlight/: nezha_beetle.launch  rexrov_lake.launch
src/nezha_sim/Gazebo/models/asphalt_plane_small/: model-1_4.sdf  model.config  model.sdf
src/nezha_sim/Gazebo/models/nezha_barrage/: model.config  model.sdf
src/nezha_sim/Gazebo/models/nezha_barrage_buoy/: model.config  model.sdf
src/nezha_sim/Gazebo/models/nezha_box/: model.config  model.sdf
src/nezha_sim/Gazebo/models/nezha_duck/: model.config  model.sdf
src/nezha_sim/Gazebo/models/nezha_mumbles_head/: model.config  model.sdf
src/nezha_sim/Gazebo/models/nezha_ocean_waves/: model.config  model.sdf
src/nezha_sim/Gazebo/models/nezha_ripple/: model.config  nezha_ripple.sdf
src/nezha_sim/Gazebo/models/nezha_spherical_buoy/: model.config  model.sdf
src/nezha_sim/Gazebo/models/nezha_wam-v/: model.config  model.sdf
src/nezha_sim/Gazebo/models/test_rig/: test_rig.xacro
src/nezha_sim/Gazebo/models/underwater_spotlight/: model.sdf  underwater_spotlight.sdf
src/nezha_sim/Gazebo/prop_data/: NWE_thick.json
src/nezha_sim/Gazebo/scripts/: attach_after_spawn.py  gantry_controller.py  gantry_test.py  near_water_effect_test.py  nezha_gantry_controller.py  rexrov_spotlight_controller.py  splash_screen.py  spotlight_controller.py  water_drag_test.py
src/nezha_sim/Gazebo/worlds/: nezha_auv_underwater.world  nezha_empty.world  nezha_empty_underwater.world  nezha_herkules_ship_wreck.world  nezha_husky_demo.world  nezha_husky_test.world  nezha_lake.world  nezha_mangalia.world  nezha_mumbles_head.world  nezha_munkholmen.world  nezha_ocean.world  underwater_heightmap.world
src/nezha_sim/nezha_description/: CMakeLists.txt  package.xml
src/nezha_sim/nezha_description/back/nezha_beetle/: CMakeLists.txt  package.xml
src/nezha_sim/nezha_description/back/nezha_beetle1001/: multirotor_base.xacro  nezha_beetle_plugins.xacro
src/nezha_sim/nezha_description/back/nezha_gantry1016/: nezha_gantry.xacro  nezha_gantry_rocket.xacro
src/nezha_sim/nezha_description/back/nezha_husky_can_fly/: nezha_husky_base.xacro  plugins.xacro
src/nezha_sim/nezha_description/back/nezha_huskyold/: nezha_husky.xacro  plugins.xacro
src/nezha_sim/nezha_description/back/nezha_mini1019/: nezha_mini_base.xacro  nezha_mini_plugins.xacro
src/nezha_sim/nezha_description/back/nezha_mini1021/: nezha_mini_base.xacro  plugins.xacro
src/nezha_sim/nezha_description/back/nezha_mini1025takeoffnormal/: nezha_mini_base.xacro  plugins.xacro
src/nezha_sim/nezha_description/iris/config/: mav_generic_odometry_sensor.gazebo
src/nezha_sim/nezha_description/nezha_beetle/: nezha_beetle_base.xacro  nezha_beetle_plugins.xacro
src/nezha_sim/nezha_description/nezha_beetle/UAV/: multirotor_base.xacro  nezha_beetle_UAV.xacro
src/nezha_sim/nezha_description/nezha_beetle/UUV/: nezha_beetle_UUV.xacro  thruster_snippets.xacro
src/nezha_sim/nezha_description/nezha_beetle/meshes/: nezha_beetle.dae
src/nezha_sim/nezha_description/nezha_f/: nezha_f_base.xacro  plugins.xacro
src/nezha_sim/nezha_description/nezha_f/UUV/: UUV.xacro  UUV_baselink.xacro
src/nezha_sim/nezha_description/nezha_f/config/: nezha_f.yaml
src/nezha_sim/nezha_description/nezha_f/meshes/: nezha_f.STL
src/nezha_sim/nezha_description/nezha_gantry_distance/: nezha_gantry.xacro  nezha_gantry（复件）.xacro
src/nezha_sim/nezha_description/nezha_gantry_distance/config/: gantry_control.yaml
src/nezha_sim/nezha_description/nezha_gantry_velocity/: nezha_gantry.xacro
src/nezha_sim/nezha_description/nezha_gantry_velocity/config/: gantry_control.yaml
src/nezha_sim/nezha_description/nezha_husky/: nezha_husky_base.xacro  plugins.xacro
src/nezha_sim/nezha_description/nezha_husky/UAV/: UAV.xacro  UAV_plugin.xacro
src/nezha_sim/nezha_description/nezha_husky/UGV/: UGV.xacro  decorations.urdf.xacro
src/nezha_sim/nezha_description/nezha_husky/UUV/: UUV.xacro  UUV_baselink.xacro  UUV_thruster.xacro
src/nezha_sim/nezha_description/nezha_husky1/: nezha_husky1_base.xacro  plugins.xacro
src/nezha_sim/nezha_description/nezha_husky1/UAV/: UAV.xacro
src/nezha_sim/nezha_description/nezha_husky1/UGV/: UGV.xacro  pacs.urdf.xacro  wheel.urdf.xacro
src/nezha_sim/nezha_description/nezha_mini/: nezha_mini_base.xacro  plugins.xacro
src/nezha_sim/nezha_description/nezha_rocket/: nezha_rocket_base.xacro  nezha_rocket_plugins.xacro  plugins.xacro
src/nezha_sim/nezha_description/underwater_components/: imu_snippets.xacro
src/nezha_sim/nezha_plugins/: CMakeLists.txt  package.xml
src/nezha_sim/nezha_plugins/include/: nasv_physics.hh  nasv_waveField.hh  nasv_wavefieldModelPlugin.hh  nezha_getWavefield.hh  nezha_motorModel.h  nezha_phaseSwitchPlugin.hh  nezha_robotStatePlugin.hh  nezha_surfacePlugin.hh  nezha_terrainDetectorPlugin.h  nezha_transmediaDragPlugin.hh  nezha_underwaterHydrodynamicsPlugin.hh  nezha_underwaterPlugin.hh  nezha_waveProbePlugin.hh  nezha_wheelEfficiency.h  nuuv_buoyantObject.hh
src/nezha_sim/nezha_plugins/src/: nasv_physics.cc  nasv_waveField.cc  nasv_wavefieldModelPlugin.cc  nasv_wavefieldVisualPlugin.cc  nezha_getWavefield.cc  nezha_motorModel.cpp  nezha_phaseSwitchPlugin.cc  nezha_robotStatePlugin.cc  nezha_surfacePlugin.cc  nezha_terrainDetectorPlugin.cpp  nezha_transmediaDragPlugin.cc  nezha_underwaterHydrodynamicsPlugin.cc  nezha_underwaterPlugin.cc  nezha_waveProbePlugin.cc  nezha_wheelEfficiency.cpp  nuuv_buoyantObject.cc
src/nezha_sim/nezha_plugins/srv/: GetPhaseSample.srv  HydrodynamicsForces.srv  SetWaveParameters.srv
(+174 files in other folders)
