<?xml version="1.0"?>
<package format="2">
  <name>nezha_description</name>
  <version>0.0.1</version>
  <description>Meshes, URDF/Xacro and launch files for Nezha robots.</description>

  <maintainer email="jiaqing.wang@sjtu.edu.cn">Jiaqing Wang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <!-- 按需加：robot_state_publisher、urdf、rviz 等 -->
  <export/>
</package>

