<?xml version="2.0"?>
<package format="2">

  <name>nezha_plugins</name>
  <version>0.1.0</version>
  <description>Gazebo/ROS plugins for the Nezha simulator.</description>


  <maintainer email="jiaqing.wang@sjtu.com.cn">Jiaqing Wang</maintainer>
  <license>BSD-3-Clause</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
<depend>std_msgs</depend>
<depend>gazebo_msgs</depend>

<build_depend>rotors_comm</build_depend>
<build_depend>rotors_gazebo_plugins</build_depend>
<exec_depend>rotors_comm</exec_depend>
<exec_depend>rotors_gazebo_plugins</exec_depend>
  <build_depend>message_generation</build_depend>

<exec_depend>message_runtime</exec_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_dev</build_depend>     <!-- 提供 Gazebo CMake 配置 -->
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>gazebo_ros</build_depend>
<depend>mav_msgs</depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>       <!-- 运行时加载 Gazebo 插件要用 -->
  <exec_depend>eigen</exec_depend>
  <exec_depend>boost</exec_depend>


<build_depend>uuv_gazebo_ros_plugins_msgs</build_depend>
<exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
<build_depend>uuv_gazebo_ros_plugins</build_depend>
<exec_depend>uuv_gazebo_ros_plugins</exec_depend>
<build_depend>uuv_world_ros_plugins_msgs</build_depend>
<exec_depend>uuv_world_ros_plugins_msgs</exec_depend>
<exec_depend>message_runtime</exec_depend>

  <!-- 4. 可选的测试依赖 -->
  <test_depend>rostest</test_depend>

  <!-- 导出信息 -->
  <export>
    <!-- 让 Gazebo 在 `roslaunch` 时自动找到插件 -->
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>

